2008-12-10  Sebastien Pouliot  <sebastien@ximian.com>

	* ProvideCorrectArgumentsToFormattingMethodsTest.cs: Add test 
	case where a string ends with '{'. This is likely what's happening 
	in #458175
	[Backport of r121270]

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Tests.Rules.Correctness.csproj: Activate makefile integration for all
	the rules projects. Remove the old mdp files as they are no longer
	needed.

2008-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsTest.cs: Remove unneeded
	System.Drawing from the using clauses.

2008-11-01  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsTest.cs: New. Unit tests
	for CheckParametersNullityInVisibleMethodsRule

2008-10-30  Jesse Jones  <jesjones@mindspring.com>

	* NullDerefTest.cs: New. Only has a few tests for now. The rule
	still reports too many false positives so for now the test and the
	rule are not part of the official build.

2008-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedTest.cs: Add more test cases 
	for better coverage.
	* FinalizersShouldCallBaseClassFinalizerTest.cs: Moved from 
	Design.	Updated namespace.
	* Test.Rules.Correctness.mdp: Add moved rule to the MD project

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedTest.cs: Moved from Design.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewCastOnIntegerDivisionTest.cs: New. Unit tests for 
	ReviewCastOnIntegerDivisionRule.
	* ReviewCastOnIntegerMultiplicationTest.cs: New. Unit tests for
	ReviewCastOnIntegerMultiplicationRule.

2008-10-06  Néstor Salceda  <nestor.salceda@gmail.com>

	* AttributeStringLiteralsShouldParseCorrectlyTest.cs: New.  Unit tests
	for AttributeStringLiteralsShouldParseCorrectlyRule.
	* Test.Rules.Correctness.mdp: Updated MD project file.

2008-09-23  Sebastien Pouliot  <sebastien@ximian.com>
